Fixed the overlaping of words in navbar

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -155,32 +155,32 @@
 }
 
 .nav-links1{
-  font-size: 1.7vw;
+  font-size: 1.5vw;
   margin-left: 1vw;
   position: absolute;
   left: 50vw;
 }
 .nav-links2{
-  font-size: 1.7vw;
+  font-size: 1.5vw;
   margin-left: 1vw;
   position: absolute;
   left:57vw
 }
 .nav-links3{
-  font-size: 1.7vw;
+  font-size: 1.5vw;
   margin-left: 1vw;
   position: absolute;
   left:72vw
 }
 .nav-links4{
-  font-size: 1.7vw;
+  font-size: 1.5vw;
   margin-left: 1vw;
   position: absolute;
   left:80vw
 }
 
 .nav-links5{
-  font-size: 1.7vw;
+  font-size: 1.5vw;
   margin-left: 1vw;
   position: absolute;
   left:88vw
